--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,8 @@
     "axios": "^0.19.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
-    "react-scripts": "0.9.5"
+    "react-scripts": "0.9.5",
+    "socket.io-client": "^2.3.0"
   },
   "devDependencies": {},
   "scripts": {
